Closed Bug 1392868 Opened 7 years ago Closed 7 years ago

All Linux builds are going to permafail when EARLY_BETA_OR_EARLIER is reset for Gecko 57 on Beta

Categories

(Core :: XPCOM, defect)

Unspecified
Linux
defect
Not set
critical

Tracking

()

VERIFIED FIXED
mozilla57
Tracking Status
firefox57 - verified

People

(Reporter: RyanVM, Assigned: glandium)

References

Details

Attachments

(1 file)

[Tracking Requested - why for this release]: Broken Linux builds halfway through the Gecko 57 Beta cycle.

Bisection on Try confirms that this was caused by revision db36870cee64 specifically. Interestingly, this failure only occurs when EARLY_BETA_OR_EARLIER gets reset in the simulation runs (which matches what we do roughly midway through the Beta cycle).

Patches used to reproduce:
https://hg.mozilla.org/try/rev/fcc3b10a200f90c59bb17be9b93a39de4fa9c0cb
https://hg.mozilla.org/try/rev/1438349ad50e67a825f427754eaccfc60f861ab3
https://hg.mozilla.org/try/rev/e99b9c1810d9624b644ad1d67439f7eae985f667

https://treeherder.mozilla.org/logviewer.html#?job_id=125036424&repo=try

/home/worker/workspace/build/src/xpcom/threads/SchedulerGroup.cpp:89:1: error: 'void {anonymous}::AutoCollectVsyncTelemetry::CollectTelemetry()' defined but not used [-Werror=unused-function]
Flags: needinfo?(mh+mozilla)
Blocks: 1322184
Flags: needinfo?(mh+mozilla)
Assignee: nobody → mh+mozilla
Component: Build Config → XPCOM
Comment on attachment 8900075 [details]
Bug 1392868 - Completely remove AutoCollectVsyncTelemetry on late beta.

https://reviewboard.mozilla.org/r/171418/#review176766
Attachment #8900075 - Flags: review?(nfroyd) → review+
Pushed by ryanvm@gmail.com:
https://hg.mozilla.org/integration/autoland/rev/cbb3f631b3de
Completely remove AutoCollectVsyncTelemetry on late beta. r=froydnj
https://hg.mozilla.org/mozilla-central/rev/cbb3f631b3de
Status: NEW → RESOLVED
Closed: 7 years ago
Resolution: --- → FIXED
Target Milestone: --- → mozilla57
Status: RESOLVED → VERIFIED
You need to log in before you can comment on or make changes to this bug.

Attachment

General

Created:
Updated:
Size: