Bug 1392868 - Completely remove AutoCollectVsyncTelemetry on late beta. r=froydnj

The class, in practice, was already doing nothing in that case, but with
it being half #ifdef'ed on EARLY_BETA_OR_EARLIER, that led to build
failures for unused code on late beta. Just remove the class completely
on late beta.